crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_do-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    DoBlock(
        Block {
            items: [
                Int {
                    value: 10,
                },
            ],
            last: None,
        },
    ),
)
