crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_do.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Do(
        Block {
            items: [],
            last: Some(
                Literal(
                    Int(
                        Int {
                            value: 10,
                        },
                    ),
                ),
            ),
        },
    ),
)
