crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_group.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Int {
            value: 0,
        },
    ),
    [],
)
