crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_if-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        If {
            branches: [
                (
                    Bool {
                        value: true,
                    },
                    Block {
                        items: [],
                        last: Some(
                            GetVar {
                                name: "a",
                            },
                        ),
                    },
                ),
                (
                    Bool {
                        value: false,
                    },
                    Block {
                        items: [],
                        last: Some(
                            GetVar {
                                name: "a",
                            },
                        ),
                    },
                ),
            ],
            else_: Some(
                Block {
                    items: [],
                    last: Some(
                        GetVar {
                            name: "a",
                        },
                    ),
                },
            ),
        },
    ),
    [],
)
