crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_if-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    If {
        branches: [
            (
                Bool {
                    value: true,
                },
                Block {
                    items: [
                        GetVar {
                            name: "a",
                        },
                    ],
                    last: Some(
                        GetVar {
                            name: "b",
                        },
                    ),
                },
            ),
        ],
        else_: Some(
            Block {
                items: [
                    GetVar {
                        name: "a",
                    },
                ],
                last: Some(
                    GetVar {
                        name: "b",
                    },
                ),
            },
        ),
    },
)
