crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_if-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
If {
    branches: [
        (
            Bool {
                value: true,
            },
            Block {
                items: [
                    GetVar {
                        name: "a",
                    },
                    GetVar {
                        name: "b",
                    },
                ],
                last: None,
            },
        ),
    ],
    else_: Some(
        Block {
            items: [
                GetVar {
                    name: "a",
                },
                GetVar {
                    name: "b",
                },
            ],
            last: None,
        },
    ),
}
