crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_if-6.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        If {
            branches: [
                (
                    Bool {
                        value: true,
                    },
                    Block {
                        items: [
                            GetVar {
                                name: "a",
                            },
                            GetVar {
                                name: "b",
                            },
                        ],
                        last: None,
                    },
                ),
                (
                    Bool {
                        value: false,
                    },
                    Block {
                        items: [
                            GetVar {
                                name: "a",
                            },
                            GetVar {
                                name: "b",
                            },
                        ],
                        last: None,
                    },
                ),
            ],
            else_: Some(
                Block {
                    items: [
                        GetVar {
                            name: "a",
                        },
                        GetVar {
                            name: "b",
                        },
                    ],
                    last: None,
                },
            ),
        },
    ),
    [],
)
